--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <i class="social-icon fab fa-instagram-square"></i>
     <i class="social-icon fab fa-facebook-square"></i>
     <i class="social-icon fab fa-twitter-square"></i>
-    <p>© Copyright 2020 BeBooK</p>
+    <p>@ Made by <a href="https://shivaramakrishna.herokuapp.com">Shivaramakrishna</a></p>
 
   </footer>
 
@@ -231,7 +231,7 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Welcome to BeBooK</h4>
+        <h4 class="modal-title">Login to BeBooK</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
